--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ h2 {
 
 h3 {
   color: #14213D;
-  font-family: 'Abel', sans-serif;
+  font-family: 2em'Abel', sans-serif;
+  text-shadow: orange 0 0 2px;
   font-size: 28px;
   text-align: center;
   text-transform: uppercase;
@@ -82,14 +83,16 @@ h3 {
 
 h4 {
   color: #ffffff;
-  font-family: 'Abel', sans-serif;
+  font-family:  2em'Abel', sans-serif;
+  text-shadow: blue 0 0 4px;
   font-size: 24px;
   text-align: left;
 }
 
 h5 {
   color: #ffffff;
-  font-family: 'Raleway', sans-serif;
+  font-family: 2em'Raleway', sans-serif;
+  text-shadow: blue 0 0 4px;
   font-size: 28px;
   text-align: left;
   text-transform: uppercase;
