--- a/css/form.css
+++ b/css/form.css
@@ -1,11 +1,13 @@
-.form{
+[hidden] { display: none; }
+.form {
     font: 95% Arial, Helvetica, sans-serif;
     max-width: 400px;
     margin: 10px auto;
     padding: 16px;
     background: #F7F7F7;
 }
-.form h6{
+
+.form h6 {
     background: #FCA311;
     padding: 20px 0;
     font-size: 140%;
@@ -14,6 +16,7 @@
     color: #fff;
     margin: -16px -16px 16px -16px;
 }
+
 .form input[type="text"],
 .form input[type="date"],
 .form input[type="datetime"],
@@ -24,9 +27,7 @@
 .form input[type="time"],
 .form input[type="url"],
 .form textarea,
-.form select 
-{
-
+.form select {
     -webkit-transition: all 0.30s ease-in-out;
     -moz-transition: all 0.30s ease-in-out;
     -ms-transition: all 0.30s ease-in-out;
@@ -42,8 +43,8 @@
     padding: 3%;
     color: #555;
     font: 95% Arial, Helvetica, sans-serif;
-
 }
+
 .form input[type="text"]:focus,
 .form input[type="date"]:focus,
 .form input[type="datetime"]:focus,
@@ -54,15 +55,14 @@
 .form input[type="time"]:focus,
 .form input[type="url"]:focus,
 .form textarea:focus,
-.form select:focus
-{
+.form select:focus {
     box-shadow: 0 0 5px #43D1AF;
     padding: 3%;
     border: 1px solid #43D1AF;
 }
 
 .form input[type="submit"],
-.form input[type="button"]{
+.form input[type="button"] {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -72,10 +72,11 @@
     border-bottom: 2px solid #30C29E;
     border-top-style: none;
     border-right-style: none;
-    border-left-style: none;    
+    border-left-style: none;
     color: #fff;
 }
+
 .form input[type="submit"]:hover,
-.form input[type="button"]:hover{
+.form input[type="button"]:hover {
     background: #2EBC99;
 }
